--- a/index.html
+++ b/index.html
@@ -179,12 +179,15 @@
     <h2 class="titulo-seccion">Porfolio</h2>
     <div class="fila">
         <div class="item">
-            <img src="images/website-3374825_640.jpg" alt="">
-            <p class="descripcion">Lorem ipsum, dolor sit.</p>
-            <a href="cv/ALMUDENA CV.pdf" target="_blank">
+            <img src="https://cdn.pixabay.com/photo/2016/11/14/03/38/achieve-1822503_1280.jpg" alt="">
+            <p class="descripcion">Proyecto Ropa deportiva</p>
+            <a href="https://github.com/almudenadomenech/PROYECTO-ROPA.git" target="_blank">
                 <button class="btn">Github</button>
             </a>
-            <button class="btn b">Demo</button>
+            <a href="https://almudenadomenech.github.io/PROYECTO-ROPA/" target="_blank">
+                <button class="btn b">Demo</button>
+            </a>
+            
 
         </div>
         <div class="item">
