modificaciones para el proyecto casas

--- a/index.html
+++ b/index.html
@@ -191,11 +191,14 @@
 
         </div>
         <div class="item">
-            <img src="images/website-3374825_640.jpg" alt="">
-            <p class="descripcion">Lorem ipsum, dolor sit.</p>
-            <button class="btn">Github</button>
-            <button class="btn b">Demo</button>
-
+            <img src="images/CasasRurales.jpg" alt="">
+            <p class="descripcion">Proyecto Casas Rurales</p>
+            <a href="https://github.com/almudenadomenech/PROYECTO-GRUPO-5" target="_blank">
+                <button class="btn">Github</button>
+            </a>
+            <a href="demo-videoCasas.html" target="_blank">
+                <button class="btn b">Demo</button>
+            </a>
         </div>
 
     </div>
